[package]

name = "pico"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-pico.git"
description = "Nonblocking parsing support for hyper using picohttpparser."
readme = "README.md"
license = "MIT"

[dependencies]
pico-sys = "*"
hyper = "*"

