[package]

name = "pico"
version = "0.0.2"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-pico.git"
description = "Nonblocking parsing support for hyper using picohttpparser."
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
pico-sys = "*"
